<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutGestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/location_te"
        android:layout_width="375dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="#FFFFFF"
        android:gravity="center_horizontal|top"
        android:text="@string/location_te"
        android:textAppearance="@style/location_te"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tabBackground="@color/Amarillo_Cinepolis"
        app:tabIndicatorColor="#28acff"
        app:tabIndicatorHeight="48dp"
        app:tabSelectedTextColor="#ffffff"
        app:tabTextColor="#ffffff">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabCartelera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabComida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billboard" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabCarrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foods" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users" />
    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="81dp"
        android:text="Seleccionar películas"
        android:textAppearance="@style/crear_cuent"
        android:textColor="#003DA5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

</androidx.constraintlayout.widget.ConstraintLayout>